refactor to LiteSetup::createEnum and additional unit tests

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
             "name": "Alexey Puchkov",
             "email": "alexey@oktopost.com",
 			"role": "Developer"
+        },
+        {
+          "name": "Marina Sherstuk",
+          "email": "marinashers@gmail.com",
+          "role": "Developer"
         }
     ],
 	
