Add Daniel Podrabinek to contributors list

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
           "name": "Marina Sherstuk",
           "email": "marinashers@gmail.com",
           "role": "Developer"
+        },
+        {
+            "name": "Daniel Podrabinek",
+            "email": "dpodrabinek@oktopost.com",
+            "role": "Developer"
         }
     ],
 	
